- Use different Win32 class names in different wx instances (Thomas Hauk).
- Support multiline labels for wxCheckBox and wxToggleButton.
- Print preview is now rendered in the resolution used by printer and
  accurately represents what will be printed. This fixes wxHtmlEasyPrinting
  preview inaccuracies on Windows; on other platforms, native preview
  should be used.

wxX11:

- Added mouse wheel support (David Hart).
- Make Enter key activate the default button (David Hart).

wxDFB:

- Implement wxBitmap ctor from XBM data.


2.8.9
-----

All:

- Optimize wxString::Replace() for single character arguments.
- Updated Hindi translation (Priyank Bolia).
- Use tr1::unordered_{map,set} for wxHash{Map,Set} implementation if available
  in STL build; in particular do not use deprecated hash_{map,set} which
  results in a lot of warnings from newer g++ (Jan Van Dijk and Pete Stieber).

All (GUI):

- Added support for reading alpha channel in BMP format (Kevin Wright).
- Fixed help viewer bug whereby the splitter sash in wxHtmlHelpWindow could
  go underneath the left-hand pane, permanently, after resizing the
  help window.
- Fixed wxHTML default font size for printing to be 12pt regardless of the
  platform, instead of depending on GUI toolkit's screen configuration.
- Support wxDP_ALLOWNONE style in generic wxDatePickerCtrl version.
- Set wxKeyEvent::m_uniChar correctly in the events generated by generic
  wxListCtrl (Mikkel S).
- Fix changing size of merged cells in wxGrid (Laurent Humbertclaude).
- Fixed wrapping bug in wxRichTextCtrl when there were images present;
  now sets the cursor to the next line after pressing Shift+Enter.
- Fixed Cmd+Back, Cmd+Del word deletion behaviour in wxRichTextCtrl.
- Fix crash when reading malformed PCX images.
- Fix bug with wrong transparency in GIF animations (troelsk).
- Store palette information for XPM images in wxImage (troelsk).
- Fixed selection bugs and auto list numbering in wxRichTextCtrl.